# plex-letterboxd-watchlist

./: .env.example  Cargo.toml
src/: letterboxd.rs  main.rs  plex.rs
src/models/: mod.rs  plex_search_dto.rs  watchlist_dto.rs
