[package]
name = "plex-letterboxd"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
reqwest = { version = "0.11", features = ["json", "cookies", "blocking"] }
chrono = "0.4.34"
xmlparser = "0.13.6"
